Index 90% falta Instagram

--- a/index.html
+++ b/index.html
@@ -111,7 +111,47 @@
     <!------------------------------------ FIN CAROUSEL  ---------------------------------------->
 
     <!------------------------------------ CARDS PRODUCTORES  ------------------------------------>
-    
+   <div class="productoresMex">
+     <h2 class="productoresTittle">Productores Mexicanos</h2>
+   </div>
+   <div class="cardProductores">
+    <div class="card-group productores">
+      <div class="card">
+        <img src="./assets/img/Chiapas.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title cardProductoresTittle">CHIAPAS</h5>
+          <p class="card-text">Chiapas cuenta con un el 33% de los beneficios a nivel nacional, opera 639 beneficios húmedos que tienen una capacidad instalada para procesar por día 28,249 Qq. Mientras que los beneficios secos suman 174 con capacidad para beneficiar 80,600 Qq por día. Este estado produce aproximadamente el 34% del total nacional, en promedio de 1.3 1.7 millones de sacos de 60 Kg La cosecha da inicio en el mes de septiembre de un año y finaliza en marzo del siguiente.</p>
+          <p class="card-text"><small class="text-muted">13 agosto del 2020</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/img/Oaxaca.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title cardProductoresTittle">OAXACA</h5>
+          <p class="card-text">Oaxaca cuenta con 135 beneficios húmedos que tienen una capacidad instalada para procesar por día 5,533 Qq. Mientras que los beneficios secos suman 56 con capacidad para beneficiar 10,670 Qq por día. Este estado produce aproximadamente el 14% del total nacional, en promedio de 650 a 765 mil sacos de 60 kg. La cosecha da inicio en el mes de octubre de un año y finaliza en marzo del siguiente.</p>
+          <p class="card-text"><small class="text-muted">13 agosto del 2020</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/img/Veracruz.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title cardProductoresTittle">VERACRUZ</h5>
+          <p class="card-text">Veracruz posee 37.4% del total de beneficios a nivel nacional cuenta con 733 beneficios húmedos que tienen una capacidad instalada para procesar por día 58,765 Qq. Mientras que los beneficios secos suman 63 con capacidad para beneficiar 29,675 Qq por día. Este estado produce aproximadamente el 23% del total nacional, en promedio de 1.5 a 1.8 millones de sacos de 60 kg. La cosecha da inicio en el mes de octubre de un año y finaliza en marzo del siguiente.</p>
+          <p class="card-text"><small class="text-muted">13 agosto del 2020</small></p>
+        </div>
+      </div>
+    </div> 
+
+    </div>
+    <!-- SnapWidget -->
+<script src="https://snapwidget.com/js/snapwidget.js"></script>
+<iframe src="https://snapwidget.com/embed/862227" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
+
+<!-- SnapWidget -->
+<script src="https://snapwidget.com/js/snapwidget.js"></script>
+<iframe src="https://snapwidget.com/embed/862233" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
+
+
     <script src="./main.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
